k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-platform-dev
  labels:
    environment: dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
